# ccsp-mcp-exploration

./: .gitignore  README.md  generate_sample_data.py  main.py  pyproject.toml  server.py
ccsp_mcp/chembl/: client.py  tools.py
ccsp_mcp/screening/: data.py  plotting.py  tools.py
